Update GuessingGameGUI.java